manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: squid
spec:
  ports:
  - name: squid
    nodePort: 31280
    port: 3128
    protocol: TCP
    targetPort: 3128
  selector:
    app: squid
  type: LoadBalancer
